--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bad-words": "^4.0.0",
     "bootstrap": "^5.3.7",
     "chart.js": "^4.5.0",
     "firebase": "^11.9.1",
